@@ -32,8 +32,8 @@ import static com.edp2021c1.randomseatgenerator.core.SeatTable.EMPTY_SEAT_PLACEH
  * @since 1.0.0
  */
 public class SeparatedPair {
-    private final String name_1;
-    private final String name_2;
+    private final String first;
+    private final String last;
 
     /**
      * Create an instance from a {@code String}.
@@ -42,8 +42,8 @@ public class SeparatedPair {
      * <p>
      * Note that every character after the first space will be taken as the second name.
      *
-     * @param s a {@code String} contains the names of the two people separated, divided by a {@code space}.
-     * @throws IllegalConfigException if the {@code String} contains only one name.
+     * @param s a {@code String} contains the names of the two people separated, divided by a {@code space}
+     * @throws IllegalConfigException if the {@code String} contains only one name
      */
     public SeparatedPair(final String s) throws IllegalConfigException {
         final List<String> t = Arrays.asList(s.split(" ", 2));
@@ -54,11 +54,11 @@ public class SeparatedPair {
             throw new IllegalConfigException(
                     "Separated name list must not contain empty seat place holder \"%s\"".formatted(EMPTY_SEAT_PLACEHOLDER));
         }
-        if (Objects.equals(t.get(0), t.get(1))) {
+        if (Objects.equals(t.getFirst(), t.getLast())) {
             throw new IllegalConfigException("Two names in one separate pair cannot be the same");
         }
-        name_1 = t.getFirst();
-        name_2 = t.getLast();
+        first = t.getFirst();
+        last = t.getLast();
     }
 
     /**
@@ -69,15 +69,15 @@ public class SeparatedPair {
      * @return if {@code name_1} and {@code name_2} are separated in the seat table.
      */
     public boolean check(final List<String> seat, final int columnCount) {
-        if (seat == null || !(seat.contains(name_1) && seat.contains(name_2))) {
+        if (seat == null || !(seat.contains(first) && seat.contains(last))) {
             return true;
         }
-        return !Arrays.asList(
+        return !List.of(
                 1,
                 columnCount - 1,
                 columnCount,
                 columnCount + 1
-        ).contains(Math.abs(seat.indexOf(name_1) - seat.indexOf(name_2)));
+        ).contains(Math.abs(seat.indexOf(first) - seat.indexOf(last)));
     }
 
 }
